hphp/test/slow/function_pointer/error_function_call_reified4.php.expectf
Fatal error: Uncaught exception 'BadMethodCallException' with message 'Function f expects a reified generic at index 0' in %s/error_function_call_reified4.php:7
Stack trace:
%A
